# retailcrm-intregration-service

./: .example.env  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: deps.py
app/api/v1/routers/: customers.py  orders.py  payments.py
app/core/: config.py  logging.py  middleware.py  request_id.py  security.py
app/crm/: client.py
app/schemas/: common.py  customers.py  orders.py  payments.py
app/services/: customers.py  orders.py  payments.py
docker/: app.Dockerfile  default.conf  docs.Dockerfile  nginx.conf
docs-site/: docusaurus.config.ts  package-lock.json  package.json  redocusaurus-wrapper.js
docs-site/static/: openapi.json
tests/: dummies.py
tests/integration/: test_customers.py  test_customers_router.py  test_orders.py  test_orders_router.py  test_payments.py  test_payments_router.py
tests/unit/: test_client.py  test_customers_service.py  test_deps.py  test_orders_service.py  test_payments_service.py
