[project]
name = "retailcrm-integration-service"
version = "0.1.0"
description = "REST API service for integration with RetailCRM with basic operations on customers and orders"
authors = [
    { name = "BloodCharry", email = "vladvorobei1994@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.125.0,<0.126.0",
    "httpx>=0.28.1,<0.29.0",
    "uvicorn>=0.38.0,<0.39.0",
    "python-dotenv>=1.2.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.14.9,<0.15.0",
    "black>=25.12.0,<26.0.0",
    "mypy>=1.19.1,<2.0.0",
    "pre-commit>=4.5.1,<5.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.11"
exclude = "venv"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
